# vtoroe_dyhanie

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  bot.db  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  vtoroe_dyhanie.yml  vtoroe_dyhanie_develop.yml
alembic/: env.py
alembic/versions/: 7cd1dc37986c_contact_and_cotnactkeywords_creation.py  b03729674f57_keyword_search_functionality_models_.py
infra/: Dockerfile  Dockerfile.admin_django  Dockerfile.bot  Dockerfile.postgres_multiple  docker-compose.yaml  requirements_admin_django.txt  requirements_tg_bot_second_wind.txt
infra/nginx/: default.conf
src/: alembic.ini  application.py  contacts_upload.py
src/admindjango_bot/: asgi.py  data.json  dump.json  initial_data.json  manage.py  my_project_dump.json  new_backup.sqlite3  settings.py  urls.py  wsgi.py
src/admindjango_bot/admin_bot/: admin.py  apps.py  models.py  views.py
src/admindjango_bot/admin_bot/migrations/: 0001_initial.py  0002_alter_aboutfundkeyboard_constant_description_and_more.py  0002_basicinfokeyboard_alter_aboutfundkeyboard_options_and_more.py  (+10 more)
src/admindjango_bot/admindjango_bot/: asgi.py  settings.py  urls.py  wsgi.py
src/bot/: basic_info_keyboards.py  error_handler.py  handlers.py  keyboards.py  keyboards_about_fund.py  utils.py
src/bot/constants/: about_fund_text.py  basic_info_text.py  button.py  callback.py  contact_list_text.py  faq_text.py  keyword_serch.py  links.py  main_text.py  onboarding_text.py  query_patterns.py  reg_forms_text.py  rules_text.py  schemas.py  state.py  text.py
src/bot/conversations/: about_fund_application.py  basic_info_application.py  command_application.py  contact_list_application.py  faq_application.py  knowledge_base_application.py  main_application.py  menu_application.py  reg_from_application.py
src/bot/core/: db.py  logger.py  settings.py
src/bot/core/db/: base.py  (+1 more)
src/bot/handlers/: __init__.py  about_fund_application.py  basic_info_application.py  command_application.py  contact_list_application.py  faq_application.py  main_application.py  menu_application.py  onboarding_application.py  rules_application.py  schemas.py
src/bot/keyboards/: about_fund_keyboards.py  basic_info_keyboards.py  contact_list_keyboards.py  keyboards.py  onboarding_keyboards.py  rules_keyboards.py
src/bot/models/: __init__.py  base.py  contact.py  contact_keyword.py  contact_keywords.py  department.py  department_job_title.py  directory_base.py  job_title.py  keyword.py  position.py
src/bot/utils/: admin_api.py  generic.py  keyword_search.py  schemas.py  send_email.py  send_message.py
(+7 files in other folders)
