[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Втордыш"
version = "1.0.0"
description = "Телеграм-бот для автоматизации HR-процессов фонда Второе Дыхание"
authors = [
    ""
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11"
poetry = "1.6.1"
python-telegram-bot = "^20.3"
pydantic = "2.3.0"
requests = "2.26.0"

[tool.poetry.extras]
flake8 = "3.9.2"
isort = "5.12.0"
python-dotenv = "0.19.0"
autopep8 = "2.11.0"
pre-commit = "3.4.0"
add-trailing-comma = "3.1.0"
mypy = "1.5.1"

[tool.flake8]
max-line-length = "79"
paths = ["./bot", "./core", "./src"]
max-complexity = "10"
exclude = ["tests", ".venv", "venv"]
per-file-ignores = [
    "__init__.py:F401",
]
ignore =
    W503,
    F811
exclude =
    tests/,
    */migrations/,
    venv/,
    env/
per-file-ignores =
    */settings.py:E501
max-complexity = 10